feat: add layotu

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,14 +1,5 @@
 <tui-root class="antialiased">
 
-  <main class="flex flex-col h-full">
-    <app-header class="border-b border-indigo-200/50 block"></app-header>
-
-    <div class="container my-5 flex-1">
-      <router-outlet />
-    </div>
-
-    <app-footer class="border-t border-indigo-200/50 block"></app-footer>
-  </main>
-
+  <router-outlet></router-outlet>
 
 </tui-root>
