feat: add signin component

--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -1,1 +1,15 @@
-<p>homepage works!</p>,
+<div class="flex flex-col gap-6">
+
+    <section class="my-12">
+        <h1>
+            Bienvenue au <span class="font-bold text-blue-800">Livl Store</span>
+        </h1>
+
+        <p>
+            Créez un compte client pour commencer sur de bonnes bases.
+        </p>
+    </section>
+
+    <app-signup></app-signup>
+
+</div>
