--- a/frontend/src/app/components/layout/layout.component.html
+++ b/frontend/src/app/components/layout/layout.component.html
@@ -1,7 +1,7 @@
 <main class="flex flex-col h-full">
     <app-header class="border-b border-indigo-200/50 block"></app-header>
 
-    <div class="container my-5 flex-1">
+    <div class="container py-8 flex-1">
         <router-outlet />
     </div>
 
