--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    h1 {
+        @apply text-4xl md:text-5xl lg:text-6xl font-medium tracking-tight text-balance;
+    }
+
+    h3 {
+        @apply text-3xl lg:text-4xl font-medium text-balance;
+    }
+
+    h4 {
+        @apply text-2xl lg:text-3xl font-medium text-balance;
+    }
+
+}
