--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,3 +1,5 @@
 <div class="flex gap-2 justify-between py-3 container">
-    <p class="text-zinc-800">Livl Store est ravi de votre visite !</p>
+    <p class="text-zinc-800">Livl ©</p>
+    <a href="https://franck-g.fr/" target="_blank" class="text-zinc-800 hover:text-blue-800 transition">par Franck
+        G.</a>
 </div>
