--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -1,12 +1,13 @@
 <div class="flex flex-col gap-6">
 
     <section class="my-12">
-        <h1>
+        <h1 class="mb-4">
             Bienvenue au <span class="font-bold text-blue-800">Livl Store</span>
         </h1>
 
         <p>
-            Créez un compte client pour commencer sur de bonnes bases.
+            Livl n'attend plus que vous ! Créez un compte client pour commencer sur de bonnes bases. Ce ne sera pas
+            long.
         </p>
     </section>
 
