--- a/frontend/src/app/components/layout/layout.component.html
+++ b/frontend/src/app/components/layout/layout.component.html
@@ -1,7 +1,7 @@
-<main class="flex flex-col h-full">
+<main class="flex flex-col">
     <app-header class="border-b border-indigo-200/50 block"></app-header>
 
-    <div class="container py-8 flex-1 max-w-screen-md">
+    <div class="container py-8 max-w-screen-md">
         <router-outlet />
     </div>
 
