style: improve header & add signup/login links on each others

--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -1,8 +1,6 @@
 <app-title>
     Bienvenue au <span class="font-bold text-blue-800">Livl Store</span>
-    <ng-container ngProjectAs="content">
-        Je suis ravis de vous retrouver ici !
-    </ng-container>
+    <p ngProjectAs="content">Je suis ravis de vous retrouver ici !</p>
 </app-title>
 
 <button tuiButton routerLink="/signup" class="mt-4">Créer un compte</button>
