--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -1,6 +1,8 @@
 <app-title>
     Se connecter
     <ng-container ngProjectAs="content">
-        Nous sommes heureux de vous revoir ! Connectez vous pour continuer.
+        <p>Nous sommes heureux de vous revoir ! Connectez vous pour continuer.</p>
+        <p><a tuiLink routerLink="/signup">Pas encore client ? Inscrivez-vous</a></p>
+
     </ng-container>
 </app-title>
