--- a/frontend/src/app/pages/signup/signup.component.html
+++ b/frontend/src/app/pages/signup/signup.component.html
@@ -1,7 +1,12 @@
 <app-title>
     Devenir client
-    <ng-container ngProjectAs="content">Livl n'attend plus que vous ! Créez un compte client pour commencer sur
-        de bonnes bases. Cela ne sera pas long.</ng-container>
+    <ng-container ngProjectAs="content">
+        <p>Livl n'attend plus que vous ! Créez un compte client pour commencer sur
+            de bonnes bases. Cela ne sera pas long.</p>
+
+        <p><a tuiLink routerLink="/login">Déjà client ? Connectez-vous</a></p>
+
+    </ng-container>
 </app-title>
 
 
