style: new theme

--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,5 +1,4 @@
-<div class="flex gap-2 justify-between py-3 container">
-    <p class="text-zinc-800">Livl ©</p>
-    <a href="https://franck-g.fr/" target="_blank" class="text-zinc-800 hover:text-blue-800 transition">par Franck
-        G.</a>
+<div class="flex gap-2 justify-between py-3 container text-slate-500">
+    <p>© 67 KHz Studio </p>
+    <p><a href="https://franck-g.fr/" target="_blank" tuiLink>par FranckG.</a></p>
 </div>
