--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,6 +1,7 @@
 <div class="flex gap-2 container py-3">
-    <a routerLink="/" class="tracking-tight text-2xl font-medium hover:text-blue-900 transition">
-        Livl Store
+    <a routerLink="/"
+        class="tracking-tight text-2xl font-bold brightness-90 hover:brightness-100 transition active:scale-95">
+        67KHz Studio
     </a>
 
 </div>
