--- a/frontend/src/app/components/layout/layout.component.html
+++ b/frontend/src/app/components/layout/layout.component.html
@@ -1,9 +1,5 @@
 <main class="flex flex-col">
-    <app-header class="border-b border-indigo-200/50 block"></app-header>
-
-    <div class="container py-8 max-w-screen-md">
-        <router-outlet />
-    </div>
-
-    <app-footer class="border-t border-indigo-200/50 block"></app-footer>
+    <app-header class="border-b border-slate-700/50 block"></app-header>
+    <router-outlet />
+    <app-footer class="border-t border-slate-700/50 block"></app-footer>
 </main>
