--- a/frontend/src/app/components/signup-form/signup-form.component.html
+++ b/frontend/src/app/components/signup-form/signup-form.component.html
@@ -16,7 +16,7 @@
         <section *ngIf="step === 0" class="animate-in slide-in-from-left-8 fade-in duration-300 px-1">
 
             <h4>Vos coordonnées</h4>
-            <p>Entrez votre nom, prénom et email</p>
+            <p class="opacity-60">Entrez votre nom, prénom et email</p>
 
             <div class="flex flex-col gap-4 py-4">
 
@@ -49,7 +49,7 @@
         <section *ngIf="step === 1" class="animate-in slide-in-from-left-8 fade-in duration-300 px-1">
 
             <h4>Votre adresse</h4>
-            <p>Entrez votre adresse postale</p>
+            <p class="opacity-60">Entrez votre adresse postale</p>
 
             <div class="flex flex-col gap-4 py-4">
 
@@ -85,7 +85,7 @@
         <section *ngIf="step === 2" class="animate-in slide-in-from-left-8 fade-in duration-300 px-1">
 
             <h4>Votre mot de passe</h4>
-            <p>Définissez un mot de passe sécurisé pour protéger votre compte.</p>
+            <p class="opacity-60">Définissez un mot de passe sécurisé pour protéger votre compte.</p>
 
             <div class="flex flex-col gap-4 py-4">
 
