--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -16,52 +16,87 @@
     }
 
     p {
-        @apply text-base text-slate-700;
+        @apply text-base;
     }
 
 }
 
 :root {
-    --tui-base-01: theme(colors.white);
-    --tui-base-02: theme(colors.slate.100);
-    --tui-base-03: theme(colors.slate.200);
-    --tui-base-04: theme(colors.slate.300);
-    --tui-base-05: theme(colors.slate.400);
+    --tui-base-01: theme(colors.slate.950);
+    --tui-base-02: theme(colors.slate.900);
+    --tui-base-03: theme(colors.slate.800);
+    --tui-base-04: theme(colors.slate.700);
+    --tui-base-05: theme(colors.slate.600);
     --tui-base-06: theme(colors.slate.500);
-    --tui-base-07: theme(colors.slate.600);
-    --tui-base-08: theme(colors.slate.700);
-    --tui-base-09: theme(colors.slate.800);
+    --tui-base-07: theme(colors.slate.400);
+    --tui-base-08: theme(colors.slate.300);
+    --tui-base-09: theme(colors.slate.200);
+    --tui-base-10: theme(colors.slate.100);
 
-    --tui-text-01: theme(colors.slate.900);
-    --tui-text-02: theme(colors.slate.700);
-    --tui-text-03: theme(colors.slate.500);
+    --tui-text-01: theme(colors.slate.50);
+    --tui-text-02: theme(colors.slate.200);
+    --tui-text-03: theme(colors.slate.400);
 
-    --tui-primary: theme(colors.blue.800);
+    --tui-primary: theme(colors.blue.700);
+    --tui-primary-hover: theme(colors.blue.600);
+    --tui-primary-active: theme(colors.blue.800);
+
+    --tui-secondary: theme(colors.slate.900);
+    --tui-secondary-hover: theme(colors.slate.800);
+    --tui-secondary-active: theme(colors.slate.900);
     
-    --tui-link: theme(colors.blue.800);
-    --tui-link-hover: theme(colors.blue.600);
+    --tui-link: theme(colors.blue.200);
+    --tui-link-hover: theme(colors.blue.300);
+    --tui-link-active: theme(colors.blue.400);
 
     --tui-positive: theme(colors.green.800);
     --tui-positive-hover: theme(colors.green.600);
 
-    --tui-negative: theme(colors.red.800);
-    --tui-negative-hover: theme(colors.red.600);
+    --tui-negative: theme(colors.red.300);
+    --tui-negative-hover: theme(colors.red.400);
 
-    --tui-error-fill: theme(colors.red.800);
-    --tui-error-bg: theme(colors.red.100);
-    --tui-error-bg-hover: theme(colors.red.200);
+    --tui-error-fill: theme(colors.red.50);
+    --tui-error-bg: theme(colors.red.600);
+    --tui-error-bg-hover: theme(colors.red.700);
 
-    --tui-success-fill: theme(colors.green.800);
-    --tui-success-bg: theme(colors.green.100);
-    --tui-success-bg-hover: theme(colors.green.200);
+    --tui-success-fill: theme(colors.green.50);
+    --tui-success-bg: theme(colors.green.800);
+    --tui-success-bg-hover: theme(colors.green.700);
 
-    --tui-warning-fill: theme(colors.yellow.800);
-    --tui-warning-bg: theme(colors.yellow.100);
-    --tui-warning-bg-hover: theme(colors.yellow.200);
+    --tui-warning-fill: theme(colors.yellow.50);
+    --tui-warning-bg: theme(colors.yellow.800);
+    --tui-warning-bg-hover: theme(colors.yellow.700);
 
-    --tui-info-fill: theme(colors.blue.800);
-    --tui-info-bg: theme(colors.blue.100);
-    --tui-info-bg-hover: theme(colors.blue.200);
+    --tui-info-fill: theme(colors.blue.50);
+    --tui-info-bg: theme(colors.blue.800);
+    --tui-info-bg-hover: theme(colors.blue.700);
 
+    --tui-autofill: theme(colors.slate.900);
 
+    --tui-radius-xs: theme(borderRadius.sm);
+    --tui-radius-s: theme(borderRadius.md);
+    --tui-radius-m: theme(borderRadius.lg);
+    --tui-radius-l: theme(borderRadius.xl);
+    --tui-radius-xl: theme(borderRadius.2xl);
+
+    --tui-padding-xs: theme(spacing[1]);
+    --tui-padding-s: theme(spacing[2]);
+    --tui-padding-m: theme(spacing[3]);
+    --tui-padding-l: theme(spacing[4]);
+
+    --tui-shadow: theme(boxShadow.DEFAULT);
+    --tui-shadow-hover: theme(boxShadow.md);
+    --tui-shadow-modal: theme(boxShadow.xl);
+    --tui-shadow-sidebar: theme(boxShadow.lg);
+    --tui-shadow-navigation: theme(boxShadow.md);
+    --tui-shadow-sheet: theme(boxShadow.lg);
+
+}
+
+tui-notification .t-content {
+    font: var(--tui-font-text-m-2);
+}
+
+tui-notification .t-icon {
+    font: var(--tui-font-text-l-2);
 }
