fix(signup): autoclose error alert

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="flex gap-2 container py-3">
     <a routerLink="/"
-        class="tracking-tight text-2xl font-bold brightness-90 hover:brightness-100 transition active:scale-95">
+        class="tracking-tighter text-2xl font-bold brightness-90 hover:brightness-100 transition active:scale-95">
         67KHz Studio
     </a>
 
