--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,7 +1,4 @@
-<div class="flex gap-2 container py-3">
-    <a routerLink="/"
-        class="tracking-tighter text-2xl font-bold brightness-90 hover:brightness-100 transition active:scale-95">
-        67KHz Studio
-    </a>
-
-</div>
+<nav class="flex gap-2 container h-navbar items-center">
+    <img routerLink="/" ngSrc="assets/instagras.svg" alt="Logo" width="200" height="100"
+        class="cursor-pointer transition hover:brightness-105" />
+</nav>
