--- a/frontend/src/app/components/layout/layout.component.html
+++ b/frontend/src/app/components/layout/layout.component.html
@@ -1,5 +1,7 @@
 <main class="flex flex-col">
-    <app-header class="border-b border-slate-700/50 block"></app-header>
-    <router-outlet />
-    <app-footer class="border-t border-slate-700/50 block"></app-footer>
+    <app-header class="border-b border-orange-950/10 fixed w-full"></app-header>
+    <div class="pt-16">
+        <router-outlet />
+    </div>
+    <app-footer class="border-t border-orange-950/10 block"></app-footer>
 </main>
