--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,39 +1,49 @@
-@import url('https://fonts.googleapis.com/css2?family=Albert+Sans:wght@400;500;600&display=swap');
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: "Outfit";
+    font-display: swap;
+    src: url(./assets/Outfit.ttf) format("truetype-variations");
+    font-weight: 400;
+}
+
+body {
+    font-feature-settings: "calt", "liga", "rlig", "rvrn", "kern", "rclt", "ss01" !important;
+    color: theme(colors.orange.50);
+}
+  
 :root {
-    --tui-base-01: theme(colors.slate.950);
-    --tui-base-02: theme(colors.slate.900);
-    --tui-base-03: theme(colors.slate.800);
-    --tui-base-04: theme(colors.slate.700);
-    --tui-base-05: theme(colors.slate.600);
-    --tui-base-06: theme(colors.slate.500);
-    --tui-base-07: theme(colors.slate.400);
-    --tui-base-08: theme(colors.slate.300);
-    --tui-base-09: theme(colors.slate.200);
-    --tui-base-10: theme(colors.slate.100);
 
-    --tui-text-01: theme(colors.slate.50);
-    --tui-text-02: theme(colors.slate.200);
-    --tui-text-03: theme(colors.slate.400);
+    --tui-base-01: theme(colors.stone.50);
+    --tui-base-02: theme(colors.stone.200);
+    --tui-base-03: theme(colors.stone.300);
+    --tui-base-04: theme(colors.stone.400);
+    --tui-base-05: theme(colors.stone.500);
+    --tui-base-06: theme(colors.stone.600);
+    --tui-base-07: theme(colors.stone.700);
+    --tui-base-08: theme(colors.stone.800);
+    --tui-base-09: theme(colors.stone.900);
 
-    --tui-heading-font: 'Albert Sans', sans-serif;
-    --tui-text-font: 'Albert Sans', sans-serif;
+    --tui-text-01: theme(colors.orange.950);
+    --tui-text-02: theme(colors.stone.600);
+    --tui-text-03: theme(colors.stone.400);
 
-    --tui-primary: theme(colors.blue.700);
-    --tui-primary-hover: theme(colors.blue.600);
-    --tui-primary-active: theme(colors.blue.800);
+    --tui-heading-font: 'Outfit', sans-serif;
+    --tui-text-font: 'InterVariable', 'Inter', sans-serif;
 
-    --tui-secondary: theme(colors.slate.900);
-    --tui-secondary-hover: theme(colors.slate.800);
-    --tui-secondary-active: theme(colors.slate.900);
+    --tui-primary: theme(colors.orange.600);
+    --tui-primary-hover: theme(colors.orange.500);
+    --tui-primary-active: theme(colors.orange.700);
+
+    --tui-secondary: theme(colors.orange.100);
+    --tui-secondary-hover: theme(colors.orange.100);
+    --tui-secondary-active: theme(colors.orange.300);
     
-    --tui-link: theme(colors.blue.200);
-    --tui-link-hover: theme(colors.blue.300);
-    --tui-link-active: theme(colors.blue.400);
+    --tui-link: theme(colors.orange.600);
+    --tui-link-hover: theme(colors.orange.500);
+    --tui-link-active: theme(colors.orange.700);
 
     --tui-positive: theme(colors.green.800);
     --tui-positive-hover: theme(colors.green.600);
@@ -41,23 +51,23 @@
     --tui-negative: theme(colors.red.300);
     --tui-negative-hover: theme(colors.red.400);
 
-    --tui-error-fill: theme(colors.red.50);
-    --tui-error-bg: theme(colors.red.600);
-    --tui-error-bg-hover: theme(colors.red.700);
+    --tui-error-fill: theme(colors.red.600);
+    --tui-error-bg: theme(colors.red.50);
+    --tui-error-bg-hover: theme(colors.red.100);
 
-    --tui-success-fill: theme(colors.green.50);
-    --tui-success-bg: theme(colors.green.800);
-    --tui-success-bg-hover: theme(colors.green.700);
+    --tui-success-fill: theme(colors.green.600);
+    --tui-success-bg: theme(colors.green.50);
+    --tui-success-bg-hover: theme(colors.green.100);
 
-    --tui-warning-fill: theme(colors.yellow.50);
-    --tui-warning-bg: theme(colors.yellow.800);
-    --tui-warning-bg-hover: theme(colors.yellow.700);
+    --tui-warning-fill: theme(colors.yellow.600);
+    --tui-warning-bg: theme(colors.yellow.50);
+    --tui-warning-bg-hover: theme(colors.yellow.100);
 
-    --tui-info-fill: theme(colors.blue.50);
-    --tui-info-bg: theme(colors.blue.800);
-    --tui-info-bg-hover: theme(colors.blue.700);
+    --tui-info-fill: theme(colors.blue.600);
+    --tui-info-bg: theme(colors.blue.50);
+    --tui-info-bg-hover: theme(colors.blue.100);
 
-    --tui-autofill: theme(colors.slate.900);
+    --tui-autofill: theme(colors.stone.200);
 
     --tui-radius-xs: theme(borderRadius.sm);
     --tui-radius-s: theme(borderRadius.md);
@@ -69,6 +79,12 @@
     --tui-padding-s: theme(spacing[2]);
     --tui-padding-m: theme(spacing[3]);
     --tui-padding-l: theme(spacing[4]);
+
+    --tui-height-xs: theme(spacing[6]);
+    --tui-height-s: theme(spacing[8]);
+    --tui-height-m: theme(spacing[10]);
+    --tui-height-l: theme(spacing[14]);
+
 
     --tui-shadow: theme(boxShadow.DEFAULT);
     --tui-shadow-hover: theme(boxShadow.md);
@@ -87,21 +103,30 @@ tui-notification .t-icon {
     font: var(--tui-font-text-l-2);
 }
 
+[tuiButton] {
+    font-family: var(--tui-heading-font) !important;
+}
+
 @layer base {
     h1 {
-        @apply text-3xl md:text-4xl lg:text-5xl font-bold tracking-tight text-balance;
+        @apply text-4xl md:text-5xl lg:text-6xl font-medium tracking-tight;
     }
 
     h3 {
-        @apply text-2xl lg:text-4xl font-medium text-balance;
+        @apply text-2xl lg:text-4xl font-medium;
     }
 
     h4 {
-        @apply text-xl lg:text-2xl font-medium text-balance;
+        @apply text-xl lg:text-2xl font-medium tracking-tight;
     }
     
     p {
         @apply text-base;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+        font-family: var(--tui-heading-font);
+        @apply text-balance;
     }
 
 }
