--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,4 +1,10 @@
-<nav class="flex gap-2 container h-navbar items-center">
-    <img routerLink="/" ngSrc="assets/instagras.svg" alt="Logo" width="200" height="100"
+<nav class="flex gap-2 container h-navbar items-center justify-between">
+    <img routerLink="/" ngSrc="assets/instagras.svg" alt="Logo" width="150" height="70"
         class="cursor-pointer transition hover:brightness-105" />
+    <div class="flex flex-wrap items-center gap-3">
+        <a *ngFor="let entry of menuEntries" tuiLink class="text-lg" [routerLink]="entry.path"
+            routerLinkActive="font-bold">
+            {{entry.title}}
+        </a>
+    </div>
 </nav>
