--- a/frontend/src/app/pages/catalog/catalog.component.html
+++ b/frontend/src/app/pages/catalog/catalog.component.html
@@ -1,1 +1,7 @@
-<pre>{{ products$ | async | json }}</pre>
+<app-title>Catalogue</app-title>
+
+<div class="grid gap-2 md:grid-cols-2 lg:grid-cols-4" *tuiLet="products$ | async as products">
+
+    <app-product-card *ngFor="let product of products" [product]="product" x></app-product-card>
+
+</div>
