--- a/frontend/src/app/components/product-card/product-card.component.html
+++ b/frontend/src/app/components/product-card/product-card.component.html
@@ -1,1 +1,11 @@
-<p>{{ product | json }}</p>,
+<tui-island>
+    <div class="flex flex-col gap-2">
+
+        <h4>{{product.name}}</h4>
+
+        <p class="text-slate-600 line-clamp-2">{{product.description}}</p>
+
+        <p class="">{{product.price}} {{ currency | tuiCurrency}}</p>
+
+    </div>
+</tui-island>
