feat(homepage): add catalog button

--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -4,7 +4,15 @@
         <p class="text-balance max-w-prose">Lorem Elsass ipsum et pellentesque
             consectetur kougelhopf
             vulputate
-            Morbi purus mamsell mollis Gal.</p>
-        <button tuiButton routerLink="/signup" class="mt-4">Créer un compte</button>
+            Morbi purus mamsell mollis Gal.
+        </p>
     </section>
 </app-title>
+
+<div class="flex gap-2 flex-wrap">
+
+    <button tuiButton routerLink="/catalog">Consulter le catalogue</button>
+
+    <button tuiButton appearance="secondary" routerLink="/signup">Créer un compte</button>
+
+</div>
