feat(designer): draggable ingredients

--- a/frontend/src/app/components/layout/layout.component.html
+++ b/frontend/src/app/components/layout/layout.component.html
@@ -1,5 +1,5 @@
 <main class="flex flex-col">
-    <app-header class="border-b border-orange-950/10 fixed w-full"></app-header>
+    <app-header class="border-b border-orange-950/10 fixed w-full z-30"></app-header>
     <div class="pt-16">
         <router-outlet />
     </div>
