--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -116,6 +116,10 @@ tui-notification .t-icon {
         @apply text-2xl lg:text-4xl font-medium;
     }
 
+    h3 {
+        @apply text-xl lg:text-3xl font-medium tracking-tight;
+    }
+
     h4 {
         @apply text-xl lg:text-2xl font-medium tracking-tight;
     }
