--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -134,7 +134,7 @@ tui-notification .t-icon {
     }
 
     .choice {
-        @apply p-3 bg-orange-50 border border-orange-100 rounded-xl cursor-ns-resize;
+        @apply p-3 bg-orange-50 ring-1 ring-orange-100 rounded-xl hover:bg-orange-100/50 hover:shadow-xl hover:shadow-orange-600/5 hover:ring-0;
     }
 
 }
