--- a/frontend/src/app/components/ingredient-tile/ingredient-tile.component.html
+++ b/frontend/src/app/components/ingredient-tile/ingredient-tile.component.html
@@ -1,4 +1,4 @@
-<div class="choice flex justify-between group items-center gap-2">
+<div class="choice flex justify-between group items-center gap-2 cursor-ns-resize">
     <tui-svg src="tuiIconDrag" class="text-slate-300 group-hover:text-slate-600 transition"></tui-svg>
     <div class="flex-1">
         <p class="text-lg font-medium">{{ingredient.name}}</p>
