feat: display total

--- a/frontend/src/app/components/ingredient-preview/ingredient-preview.component.html
+++ b/frontend/src/app/components/ingredient-preview/ingredient-preview.component.html
@@ -3,6 +3,6 @@
     <p>{{ingredient.name}}</p>
     <p>{{ingredient.description}}</p>
 
-    <tui-money [value]="ingredient.price" [currency]="currency"></tui-money>
+    <app-money [value]="ingredient.price"></app-money>
 
 </button>
