--- a/frontend/src/app/components/product-card/product-card.component.html
+++ b/frontend/src/app/components/product-card/product-card.component.html
@@ -8,7 +8,7 @@
 
         <p class="text-slate-600 line-clamp-2">{{product.description}}</p>
 
-        <tui-money [value]="product.price" [currency]="currency"></tui-money>
+        <app-money [value]="product.price"></app-money>
 
     </div>
 </tui-island>
